fix(Input): correct alignment between prefix icon and input content
ISSUES CLOSED: #1588

--- a/terminus-ui/form-field/src/form-field.component.scss
+++ b/terminus-ui/form-field/src/form-field.component.scss
@@ -265,7 +265,7 @@ $outline-appearance-label-offset: -.25em;
   .ts-form-field__suffix {
     flex: none;
     position: relative;
-    top: $form-field-outline-label-overlap;
+    top: $form-field-outline-label-overlap - .1;
     white-space: nowrap;
   }
 
